static/base.scss
                                                                                                                                                                                              
/*                                                                                   mm           
                                                                                    MM           
 ,p6"bo   ,pW"Wq.`7MMpMMMb.pMMMb. `7MMpdMAo.  ,pW"Wq.`7MMpMMMb.  .gP"Ya `7MMpMMMb.mmMMmm ,pP"Ybd 
6M'  OO  6W'   `Wb MM    MM    MM   MM   `Wb 6W'   `Wb MM    MM ,M'   Yb  MM    MM  MM   8I   `" 
8M       8M     M8 MM    MM    MM   MM    M8 8M     M8 MM    MM 8M""""""  MM    MM  MM   `YMMMa. 
YM.    , YA.   ,A9 MM    MM    MM   MM   ,AP YA.   ,A9 MM    MM YM.    ,  MM    MM  MM   L.   I8 
 YMbmd'   `Ybmd9'.JMML  JMML  JMML. MMbmmd'   `Ybmd9'.JMML  JMML.`Mbmmd'.JMML  JMML.`MbmoM9mmmP' 
                                    MM                                                           
                                  .JMML.                                                      */
@font-face {
  font-family: 'Inconsolata';
  src: 'https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap';
}


@tailwind base;
@tailwind components;
@tailwind utilities;
* {font-family:'Inconsolata'; line-height: 1.35;}

// ? Keeping these for now
// .h2d{font-size:42px}
// .h3d{font-size:22px}
footer{text-align:center;bottom:0}
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active
{
 -webkit-box-shadow: 0 0 0 30px white inset !important;
}

// ? Colors for namehis links
a{color:royalblue}
.nhfirst{color:#87afeb}
.nhmiddle{color:cornflowerblue}
/*                  ,,                          
                 `7MM                          
                   MM                          
 ,p6"bo   ,pW"Wq.  MM  ,pW"Wq.`7Mb,od8 ,pP"Ybd 
6M'  OO  6W'   `Wb MM 6W'   `Wb MM' "' 8I   `" 
8M       8M     M8 MM 8M     M8 MM     `YMMMa. 
YM.    , YA.   ,A9 MM YA.   ,A9 MM     L.   I8 
 YMbmd'   `Ybmd9'.JMML.`Ybmd9'.JMML.   M9mmmP'  */

.black { color: black }
.blank {color: #010101}
.dark_blue { color: #00a }
.dark_green { color: #0a0 }
.dark_aqua, .cyan { color: #0aa }
.dark_red { color: #a00 }
.dark_purple, .purple { color: #a0a }
.gold { color: #fa0 }
.gray { color: #aaa }
.dark_gray, .darkgray { color: #555 }
.blue { color: #55f }
.green, .lime { color: #5f5 }
.aqua { color: #5ff }
.red { color: #f55 }
.light_purple, .pink { color: #f5f }
.yellow { color: #FFD965 } // not actual yellow
.white { color: #fff }

.chocolate {background-image:linear-gradient(to right,tomato,coral,gold,lawngreen,steelblue,blueviolet,orchid);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
.almost{background-image:linear-gradient(to right,#ddd6f3,#faaca8);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
.lightgray { color: #ccc }
.orange { color: #f60 }
.lawn {color: #708f5b}
.yellowgreen {color: yellowgreen}
.master{background-image:linear-gradient(to right,lightcoral, crimson);-webkit-background-clip:text;-webkit-text-fill-color:transparent}

.twitter{color:#1da1f2}
.instagram{color:#c1558b}
.twitch{color:#8c45f7}
.discord{color:#7286d9}
.hypixelForums{color:#eabc48}
.youtube{color:#f00}

.mirror{background-image:radial-gradient(#ccc,#666);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
.light{background-image:linear-gradient(to right,#fff,#ff0,#fa0);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
.dawn{background-image:linear-gradient(to right,#fa0,#ccc,#228d7b);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
.dusk{background-image:linear-gradient(to right,#93f,#f69,#fa0,#ff6);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
.air{background-image:linear-gradient(to right,aqua,#ccc,#666);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
.wind{background-image:linear-gradient(to right,#ccc,#0f0,#070);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
.nebula{background-image:linear-gradient(to right,#900,#f30,#f3f);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
.thunder{background-image:linear-gradient(to right,#ff6,#fff,#666);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
.earth{background-image:linear-gradient(to right,#0f0,#070,#fa0,#ff6);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
.water{background-image:linear-gradient(to right,aqua,teal, royalblue);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
.fire{background-image:linear-gradient(to right,#ff3,#fa0,#800);-webkit-background-clip:text;-webkit-text-fill-color:transparent}                       
                                           
/*           ,,                        
          mm   `7MM                        
          MM     MM                        
,pW"Wq.mmMMmm   MMpMMMb.  .gP"Ya `7Mb,od8 
6W'   `Wb MM     MM    MM ,M'   Yb  MM' "' 
8M     M8 MM     MM    MM 8M""""""  MM     
YA.   ,A9 MM     MM    MM YM.    ,  MM     
`Ybmd9'  `Mbmo.JMML  JMML.`Mbmmd'.JMML.    */	 

.columnZ{float:left;width:32%;margin-top:15px}
.columnA{float:left;width:35%;padding-right:1%}
.columnB{float:left;width:32%}

